[project]
name = "kishu_kernel"
version = "0.0.1"
description = "Kishu Kernel for Jupyter"
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=6.0.0",
    "kishu",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = ["command", "kernel", "__init__"]

[project.scripts]
kishu-kernel = "command:main"
