[project]
name = "kishu_kernel"
version = "0.0.1"
description = "Kishu Kernel for Jupyter"
requires-python = ">=3.8"
dependencies = [
    "jupyter",
    "ipykernel>=6.0.0",
    "kishu",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kishu_kernel"]

[project.scripts]
kishu-kernel = "kishu_kernel.command:main"
